--- a/docs/assests/style.scss
+++ b/docs/assests/style.scss
@@ -1,8 +1,8 @@
----
----
+// ---
+// ---
 
-@import "{{ site.theme }}";
+// @import "{{ site.theme }}";
 
-.inner {
-  max-width: 75%;
-}
+// .inner {
+//   max-width: 75%;
+// }
